# learning-cp-bounds

./: .gitignore  Makefile  README.md  solver_ssp
data/: toy  weing1  weish1  weish10  weish6
data/mknapsack/: generate_dataset_pissinger.py  generate_dataset_weish.py  generate_subnodes.py
data/mknapsack/bounds/: knapsacks-data-testset100.txt
data/mknapsack/test/pissinger/: knapsacks-data-testset.txt  knapsacks-data-testset100-0.txt  knapsacks-data-testset100-1.txt  knapsacks-data-testset100-10.txt  knapsacks-data-testset100-11.txt  knapsacks-data-testset100-12.txt  knapsacks-data-testset100-13.txt  knapsacks-data-testset100-14.txt  knapsacks-data-testset100-15.txt  knapsacks-data-testset100-16.txt  knapsacks-data-testset100-17.txt  knapsacks-data-testset100-18.txt  knapsacks-data-testset100-19.txt  knapsacks-data-testset100-2.txt  knapsacks-data-testset100-20.txt  knapsacks-data-testset100-21.txt  knapsacks-data-testset100-22.txt  knapsacks-data-testset100-23.txt  knapsacks-data-testset100-24.txt  knapsacks-data-testset100-25.txt  knapsacks-data-testset100-26.txt  knapsacks-data-testset100-27.txt  knapsacks-data-testset100-28.txt  knapsacks-data-testset100-29.txt  knapsacks-data-testset100-3.txt  knapsacks-data-testset100-30.txt  knapsacks-data-testset100-31.txt  knapsacks-data-testset100-32.txt  knapsacks-data-testset100-33.txt  knapsacks-data-testset100-34.txt  knapsacks-data-testset100-35.txt  knapsacks-data-testset100-36.txt  knapsacks-data-testset100-37.txt  knapsacks-data-testset100-38.txt  knapsacks-data-testset100-39.txt  knapsacks-data-testset100-4.txt  knapsacks-data-testset100-40.txt  knapsacks-data-testset100-41.txt  knapsacks-data-testset100-42.txt  knapsacks-data-testset100-43.txt  (+14 more)
data/mknapsack/test/weish/: knapsacks-data.txt  n1c1w1_a_1.txt  n1c1w1_b.txt  n1c1w1_b_1.txt  n1c1w1_c.txt  n1c1w1_c_1.txt  n1c1w1_d.txt  n1c1w1_d_1.txt  n1c1w1_e.txt  n1c1w1_e_1.txt  n1c1w1_f.txt  n1c1w1_g.txt  n1c1w1_h.txt  (+18 more)
data/ssp/: generate_database_ssp.py  preprocess.py
data/ssp/bounds/: stp-data-testset10-80.txt
data/ssp/test/: ssp-data-testset10-20-0.txt  ssp-data-testset10-20-1.txt  ssp-data-testset10-20-10.txt  ssp-data-testset10-20-11.txt  ssp-data-testset10-20-12.txt  ssp-data-testset10-20-13.txt  ssp-data-testset10-20-14.txt  ssp-data-testset10-20-15.txt  ssp-data-testset10-20-16.txt  ssp-data-testset10-20-17.txt  ssp-data-testset10-20-18.txt  ssp-data-testset10-20-19.txt  ssp-data-testset10-20-2.txt  ssp-data-testset10-20-20.txt  ssp-data-testset10-20-21.txt  ssp-data-testset10-20-22.txt  ssp-data-testset10-20-23.txt  ssp-data-testset10-20-24.txt  ssp-data-testset10-20-25.txt  ssp-data-testset10-20-26.txt  ssp-data-testset10-20-27.txt  ssp-data-testset10-20-28.txt  ssp-data-testset10-20-29.txt  ssp-data-testset10-20-3.txt  ssp-data-testset10-20-30.txt  ssp-data-testset10-20-31.txt  ssp-data-testset10-20-32.txt  ssp-data-testset10-20-33.txt  ssp-data-testset10-20-34.txt  ssp-data-testset10-20-35.txt  ssp-data-testset10-20-36.txt  ssp-data-testset10-20-37.txt  ssp-data-testset10-20-38.txt  ssp-data-testset10-20-39.txt  ssp-data-testset10-20-4.txt  ssp-data-testset10-20-40.txt  ssp-data-testset10-20-41.txt  ssp-data-testset10-20-42.txt  ssp-data-testset10-20-43.txt  ssp-data-testset10-20-44.txt  (+115 more)
data/ssp/train/: ssp-data-trainset10-20.txt  ssp-data-trainset10-80.txt  ssp-data-trainset20-20.txt  ssp-data-trainset20-80.txt  valset-ssp-data10-20.txt
src/: bounding.py  knapsack.py  main.py  sandbox.py  utils.py
src/problem/RCPSP/solving/: CMakeLists.txt  FindGurobiGecode.cmake
src/problem/SSP/solving/: CMakeLists.txt  FindGecode.cmake  main.cpp  solver_ssp.cpp
src/problem/mknapsack/solving/: CMakeLists.txt  FindGecode.cmake  solver.cpp
src/problem/mknapsack/solving/benchmark/: generate_stats.py  mknapsacks.txt
trained_models/SSP/: GNN-SSP-10-20.pt  GNN-SSP-10-80.pt  GNN-SSP-20-20.pt  model_graph_representation-CPU10-20.pt  model_graph_representation-CPU10-80.pt  model_graph_representation-CPU20-20.pt  model_graph_representation-root-CPU10-80.pt  model_graph_representation-root-CPU20-20.pt  model_graph_representation-root-GPU10-80.pt  model_graph_representation-root-GPU20-20.pt  model_prediction-CPU10-80.pt  model_prediction-GPU20-20.pt  model_prediction-root-CPU10-20.pt  model_prediction-root-CPU10-80.pt  model_prediction-root-CPU20-20.pt  model_prediction-root-GPU10-80.pt  model_prediction-root-GPU20-20.pt
trained_models/mknapsack/: GNN-100.pt  GNN-30.pt  GNN-50.pt  model_graph_representation-CPU100.pt  model_graph_representation-CPU30.pt  model_graph_representation-CPU50.pt  model_graph_representation-GPU100.pt  model_graph_representation-GPU30.pt  model_graph_representation-GPU50.pt  model_graph_representation-root-CPU100.pt  model_graph_representation-root-CPU30.pt  model_graph_representation-root-CPU50.pt  model_graph_representation-root-GPU100.pt  model_graph_representation-root-GPU30.pt  model_graph_representation-root-GPU50.pt  model_graph_representation.pt  model_prediction-CPU100.pt  model_prediction-CPU30.pt  model_prediction-CPU50.pt  model_prediction-GPU100.pt  model_prediction-GPU30.pt  model_prediction-GPU50.pt  model_prediction-root-CPU100.pt  model_prediction-root-CPU30.pt  model_prediction-root-CPU50.pt  model_prediction-root-GPU100.pt  model_prediction-root-GPU30.pt  model_prediction-root-GPU50.pt  model_prediction.pt
(+24 files in other folders)
